Enable SSL connection to remote Redis server, eg in a Cloud environment